Change main class in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("noob.Noob")
 }
 
 shadowJar {
@@ -36,6 +36,6 @@ shadowJar {
     archiveClassifier = null
 }
 
-run{
+run {
     standardInput = System.in
 }
